--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
 	</properties>
 
 	<dependencies>
+
+		<!--依赖common-->
+		<dependency>
+			<groupId>com.study.mall</groupId>
+			<artifactId>mall-api-commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
