--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		<swagger.version>2.7.0</swagger.version>
 		<joda.time.version>2.9.9</joda.time.version>
 		<gson.version>2.8.5</gson.version>
-		<fastjson.version>1.2.73</fastjson.version>
+		<fastjson.version>1.2.7</fastjson.version>
 		<hutool.version>4.1.1</hutool.version>
 		<lombok.version>1.18.4</lombok.version>
 
@@ -240,17 +240,25 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 		</dependency>
+
+		<!--nacos-client-->
+		<!--去除一直打印的日志-->
+		<dependency>
+			<groupId>com.alibaba.nacos</groupId>
+			<artifactId>nacos-client</artifactId>
+			<version>1.4.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
-		<finalName>${project.artifactId}</finalName>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh</artifactId>
-				<version>2.8</version>
-			</extension>
-		</extensions>
+<!--		<finalName>${project.artifactId}</finalName>-->
+<!--		<extensions>-->
+<!--			<extension>-->
+<!--				<groupId>org.apache.maven.wagon</groupId>-->
+<!--				<artifactId>wagon-ssh</artifactId>-->
+<!--				<version>2.8</version>-->
+<!--			</extension>-->
+<!--		</extensions>-->
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
