--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,13 +1,11 @@
 spring:
-  application:
-    name: mall-admin
   cloud:
     nacos:
       config:
         # server-addr: http://106.15.238.69:8848 # 配置中心地址
         server-addr: http://81.69.6.206:1122  # 集群配置nginx地址
-        namespace: 513896da-77d1-4285-a157-a508eb8d4581
-        group: dev
+        namespace: 50b719ee-29c4-41d5-8139-962971609d5b
+        group: admin
         file-extension: yaml
         # 加载config中的数据源配置
         extension-configs[0]:
