--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -10,15 +10,15 @@ spring:
         # 加载config中的数据源配置
         extension-configs[0]:
           data-id: datasource.yml
-          group: dev
+          group: admin
           refresh: true
         # 加载config中的mybatis配置
         extension-configs[1]:
           data-id: mybatis-plus.yml
-          group: dev
+          group: admin
           refresh: true
         # 加载config中的其它配置
         extension-configs[2]:
           data-id: application-admin.yml
-          group: dev
+          group: admin
           refresh: true
