--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -9,16 +9,16 @@ spring:
         file-extension: yaml
         # 加载config中的数据源配置
         extension-configs[0]:
-          data-id: datasource.yml
+          data-id: datasource.yaml
           group: admin
           refresh: true
         # 加载config中的mybatis配置
         extension-configs[1]:
-          data-id: mybatis-plus.yml
+          data-id: mybatis-plus.yaml
           group: admin
           refresh: true
         # 加载config中的其它配置
         extension-configs[2]:
-          data-id: application-admin.yml
+          data-id: application-admin.yaml
           group: admin
           refresh: true
