--- a/pom.xml
+++ b/pom.xml
@@ -227,7 +227,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
+			<artifactId>fastJson</artifactId>
 			<version>${fastjson.version}</version>
 		</dependency>
 		<dependency>
